<resources>
    <string name="app_name">TF1Samples</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">SUBMIT</string>
    <string name="percentage_format">%d%%</string>
    <string name="quiz_expired">QUIZ EXPIRED</string>

    <string name="quiz_tag">QUIZ</string>
    <string name="ama_tag">ASK A QUESTION</string>
    <string name="ama_edit_box_hint">Write your message</string>
    <string name="ama_edit_box_count">250</string>
    <string name="ama_expired">CLOSED</string>
    <string name="ama_submitted">SUBMITTED</string>
    <string name="sponsored_by">Sponsored By</string>
    <string name="ama_content">Image</string>
    <string name="prediction_tag">PREDICTION</string>
</resources>