<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/quiz_rounded_corner_white_background"
    android:padding="12dp">


    <View
        android:id="@+id/txtTitleBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/titleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleView" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/livelike_ama_tag"
        android:textSize="@dimen/ama_tag_text_size"
        android:textStyle="bold"
        app:fontFamily="@font/tnt_digital_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="true"
        android:text="@string/ama_tag" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/widgetContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ama_body_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/ama_body_padding_top">

                <TextView
                    android:id="@+id/bodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/livelike_ama_body_text_color"
                    android:textSize="@dimen/ama_body_text_size"
                    android:fontFamily="@font/tnt_digital_medium"
                    android:gravity="start"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:letterSpacing="0.04"
                    tools:text="Start a conversation with TNT sports" />


                <EditText
                    android:id="@+id/userInputEdt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ama_input_box_min_height"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ama_edit_text_box"
                    android:gravity="top"
                    android:hint="@string/ama_edit_box_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine|textAutoCorrect"
                    android:maxLength="250"
                    android:paddingTop="@dimen/ama_input_box_padding_top"
                    android:paddingLeft="@dimen/ama_input_box_padding_left"
                    android:paddingRight="@dimen/ama_input_box_padding_right"
                    android:paddingBottom="@dimen/ama_input_box_padding_bottom"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textColor="@color/livelike_ama_user_input_box_text_color_selector"
                    android:textColorHint="@color/livelike_ama_edit_text_hint_color"
                    android:textDirection="locale"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    android:fontFamily="@font/tnt_digital_regular"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bodyText" />

                <TextView
                    android:id="@+id/textCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/userInputEdt"
                    android:layout_marginEnd="@dimen/ama_count_text_margin_end"
                    android:layout_marginBottom="@dimen/ama_count_text_margin_bottom"
                    android:textSize="@dimen/ama_count_text_size"
                    android:visibility="visible"
                    android:textColor="@color/livelike_ama_edit_text_hint_color"
                    android:text="@string/ama_edit_box_count"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userInputEdt">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sendBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:paddingLeft="@dimen/ama_send_btn_padding_left"
                        android:paddingRight="@dimen/ama_send_btn_padding_right"
                        android:background="@drawable/submit_btn_background"
                        android:enabled="false"
                        android:letterSpacing="0.08"
                        android:text="@string/submit"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:fontFamily="@font/tnt_digital_bold"
                        android:textSize="14sp"
                        />


                    <TextView
                        android:id="@+id/confirmationMessageTv"
                        android:layout_width="wrap_content"

                        android:layout_height="@dimen/ama_confirmation_message_height"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/tnt_digital_regular"
                        android:layout_marginLeft="@dimen/ama_confirmation_message_margin_left"
                        android:layout_toRightOf="@+id/sendBtn"
                        android:autoSizeMaxTextSize="12sp"
                        android:autoSizeMinTextSize="9sp"
                        android:autoSizeStepGranularity="1sp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:textColor="@color/livelike_ama_confirmation_text_color"
                        android:textSize="@dimen/ama_confirmation_message_text_size"
                        android:visibility="visible"
                        tools:text="Thanks for your submission" />
                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sponsorContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ama_body_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/widgetContainer">

        <TextView
            android:id="@+id/sponsor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tnt_digital_regular"
            android:text="@string/sponsored_by"
            android:textColor="@color/livelike_sponsor_text_color"
            android:textSize="@dimen/ama_sponsor_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sponsor_iv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/sponsor_iv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ama_sponsor_image_height"
            android:contentDescription="@string/ama_content"
            android:layout_marginLeft="@dimen/ama_sponsor_image_margin_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sponsor_label"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>